<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trinta.bruno.udraw.activities.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/infoId"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/identifiantConnexion" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/identifiantConnexion"
        android:inputType="textPassword"
        android:hint="@string/infoPwd"
        android:layout_gravity="center"
        android:id="@+id/password"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:id="@+id/connexionButton" />

    <Button
        android:text="@string/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexionButton"
        android:id="@+id/createAccountButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
